<resources>
    <string name="app_name">CodeSharp</string>
    <string name="title_home">Questions</string>
    <string name="title_dashboard">Dashboard</string>

    <!--  Icons Names -->
    <string name="search_icon">Search</string>
    <string name="filter_icon">Filter</string>
    <string name="more_icon">Show More</string>

    <!--  Settings/Popup Menu  -->
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="settings_general_header">General</string>
    <string name="sync_header">Sync</string>
    <string name="account_header">Account</string>

    <!-- General Preferences -->
    <string name="dark_mode_title">Dark Mode</string>
    <string name="prog_lang_title">Preferred Programming Language</string>
    <string name="prog_lang_summary">We will display questions/answers in your preferred programming language if available</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync questions periodically</string>

    <!-- Sign Out Preferences -->
    <string name="sign_out_button_title">Sign Out</string>

    <!--  Login Strings for FirebaseUI  -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--  Loading Placeholders  -->
    <string name="question_title_placeholder">CodeSharp</string>

    <!--  Placeholders  -->
    <string name="question_title"><b>Title:</b> %1$s</string>
    <string name="question_description"><b>Description:</b> %1$s</string>
    <string name="question_submit_button">Submit</string>

    <string name="question_content">
                package io.github.kbiakov.codeviewexample;\n
        \n
        import android.os.Bundle;\n
        import android.support.annotation.Nullable;\n
        import android.support.v4.content.ContextCompat;\n
        import android.support.v7.app.AppCompatActivity;\n
        \n
        import io.github.kbiakov.codeview.CodeView;\n
        import io.github.kbiakov.codeview.highlight.ColorTheme;\n
        \n
        public class ListingsActivity extends AppCompatActivity {\n
            \n
            @Override\n
            protected void onCreate(@Nullable Bundle savedInstanceState) {\n
                super.onCreate(savedInstanceState);\n
                setContentView(R.layout.activity_listings);\n
                \n
                int myColor = ContextCompat.getColor(this, R.color.code_content_background);\n
                \n
                CodeView codeView = (CodeView) findViewById(R.id.code_view);\n
                \n
                // use chaining to build view\n
                codeView.highlightCode(\"js\")\n
                        .setColorTheme(ColorTheme.SOLARIZED_LIGHT.withBgContent(myColor))\n
                        .setCodeContent(getString(R.string.listing_js));\n
                \n
                // do not use chaining for built view\n
                // (you can, but follow it should be performed sequentially)\n
                codeView.setCodeContent(getString(R.string.listing_java));\n
                codeView.highlightCode("java");\n
            }\n
        }
    </string>
    <string name="show_all">Show All</string>

</resources>
