<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_general_header">
        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/dark_mode_title"
            app:defaultValue="true"/>

<!--        todo: save as a reference (these are from default android studio)-->
<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <!--        todo: save as a reference (these are from default android studio)-->
<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>
