<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu_filter"
        android:title="@string/filter_icon"
        android:icon="@drawable/ic_filter_foreground"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/main_menu_search"
        android:title="@string/search_icon"
        android:icon="@drawable/ic_search_foreground"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_foreground"
        android:title="@string/more_icon"
        app:showAsAction="ifRoom" />
</menu>