<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/answer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:animateLayoutChanges="true"
    tools:context=".ui.answer.AnswerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/answer_question_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_xsmall"
                android:textSize="16sp"
                android:text="@string/question_title"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/answer_question_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_xsmall"
                android:textSize="16sp"
                android:text="@string/question_description"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

            <io.github.kbiakov.codeview.CodeView
                android:id="@+id/answer_question_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_xsmall"
                app:animateOnStart="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

            <LinearLayout
                android:id="@+id/answer_question_answers_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_xsmall"
                android:orientation="vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

            <Button
                android:id="@+id/answer_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_xsmall"
                android:layout_gravity="center_horizontal"
                android:text="@string/question_submit_button"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
